tests/ui/pattern/usefulness/match-ref-ice.stderr
error: unreachable pattern
  --> $DIR/match-ref-ice.rs:13:9
   |
LL |         [1, ref _madoka, 3] => (),
   |         ------------------- matches all the relevant values
LL |         [1, 2, 3] => (),
   |         ^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/match-ref-ice.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

